# LangOCR

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
doc/: Mock UI - LangOCR.drawio  Sequence_Diagram.drawio  doc.org  naming_conventions.md
gui/: Makefile  README.md  draw_overlay.cpp  draw_overlay.h  langocr_app.cpp  langocr_app.h  screen_overlay.cpp  screen_overlay.h  tesseract_ocr_engine.cpp  tesseract_ocr_engine.h
gui/main/: main.cpp
lib/: log.cpp  log.hpp  logger.cpp  logger.hpp
ocrserver/: Makefile  main.cpp  ocr_server.cpp  ocr_server_signals.cpp  ocr_server_signals.hpp
proto/gtkgui/: helloworld.cpp  helloworld.h  main.cpp  makefile
proto/jp-ocr/: main.cpp  makefile
proto/qtband/: Makefile  main.cpp  mainwindow.cpp  mainwindow.h  qtband.pro
proto/qtgui/: Makefile  main.cpp  mainwidget.cpp  mainwidget.h  qtgui.pro
proto/xgui/: main.cpp  makefile
proto/xtest/: main.c
server/: Makefile  config_file.cpp  config_file.hpp  config_value.cpp  config_value.hpp  daemonize_process.c  daemonize_process.cpp  daemonize_process.h  main.cpp  ocr_server.cpp  ocr_server.hpp  ocr_server_signals.cpp  server_config.cpp  server_config.hpp  tesseract_ocr_engine.cpp  tesseract_ocr_engine.h  uwebsocket_server.cpp  uwebsocket_server.hpp
server/main/: main.cpp
server/tests/: config_value_test.cpp  toml_ex.toml
src/: Makefile  decoded_text.cpp  decoded_text.h  draw_overlay.cpp  draw_overlay.h  draw_window.cpp  draw_window.h  japanese_ocr_app.cpp  japanese_ocr_app.h  langocr.pro  langocr_app.cpp  langocr_app.h  main.cpp  ocr_engine.cpp  ocr_engine.h  overlay_window.cpp  overlay_window.h  qtmain.pro  screen_overlay.cpp  screen_overlay.h  tesseract_ocr_engine.cpp  tesseract_ocr_engine.h  text_image.h
test/: CMakeLists.txt  conanfile.py
test/server/: config_value_unittest.cpp  server_config_unittest.cpp
